# CI_GI_Nombres_en_Texte

./: .gitignore  CMakeLists.txt
dinamic/: dinamic_entiere.c  dinamic_reel.c  french_numbers.txt
me/: .reel_en_lettre.c.kate-swp  .~lock.ssh_key.pub#  reel  reel_en_lettre.c
scrap/: main.c  main2.c  static_nb_to_lettre.c
static/: static_entie_to_lettre.c  static_reel.c
static-v2/: entie_en_lettre_st.c
